--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,34 @@
 Package: AwesomePackage
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Title: Infer ancestry with some models and fit those models with some algorithms
+Version: 0.1.0
+Authors@R: person("Jonathon", "Chow", email = "jonathonchow23@gmail.com", 
+    role = c("aut", "cre"))
+Description: We use the classical PSD model for ancestor inference, which has 
+    been widely used, such as ADMIXTURE, FRAPPE. We illustrate the close 
+    relationship between the PSD model, the Poisson NMF model and the 
+    multinomial topic model, which can optimize the algorithm. We use 
+    Expectation-Maximization algorithm (EM), co-ordinate descent algorithm 
+    (CD), sequential quadratic programming algorithm (SQP) and stochastic 
+    variational inference algorithm (SVI) to fit the model, and illustrate 
+    the differences between these algorithms through simulation experiments 
+    and real data experiments.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
-URL: https://github.com/JONATHONCHOW/AwesomePackage
+URL: https://github.com/JONATHONCHOW/AwesomePackage,
+    https://jonathonchow.github.io/AwesomePackage/
 BugReports: https://github.com/JONATHONCHOW/AwesomePackage/issues
+Depends: 
+    R (>= 3.5.0)
+LinkingTo: 
+    Rcpp,
+    RcppEigen
+Imports: 
+    cowplot,
+    ggplot2,
+    Rcpp
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
