--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: AwesomePackage
 Title: Infer ancestry with some models and fit those models with some algorithms
-Version: 0.3.0
+Version: 0.4.0
 Authors@R: person("Jonathon", "Chow", email = "jonathonchow23@gmail.com", 
     role = c("aut", "cre"))
 Description: We use the classical PSD model for ancestor inference, which has 
@@ -32,3 +32,4 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
+LazyData: true
