--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(hello_world)
 export(psd_fit_em)
 export(psd_fit_sqp)
+export(psd_fit_vi)
 export(structure_plot)
 importFrom(Rcpp,evalCpp)
 importFrom(cowplot,theme_cowplot)
