--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(plot_loss)
 export(plot_structure)
 export(psd_fit_em)
 export(psd_fit_sqp)
+export(psd_fit_svi)
 export(psd_fit_vi)
 importFrom(Rcpp,evalCpp)
 importFrom(cowplot,theme_cowplot)
