--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(hello_world)
 export(plot_loss)
 export(plot_structure)
+export(psd_error)
 export(psd_fit_em)
 export(psd_fit_sqp)
 export(psd_fit_svi)
 export(psd_fit_vi)
+export(psd_loglikelihood)
 importFrom(Rcpp,evalCpp)
 importFrom(cowplot,theme_cowplot)
 importFrom(ggplot2,aes_string)
