--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(psd_fit_sqp)
 export(psd_fit_svi)
 export(psd_fit_vi)
 export(psd_loglikelihood)
+export(psd_loglikelihood_svi)
 importFrom(Rcpp,evalCpp)
 importFrom(cowplot,theme_cowplot)
 importFrom(ggplot2,aes_string)
