--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,8 +2,10 @@ pandoc: '2.18'
 pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
-  psd_fit_em: psd_fit_em.html
+  application_hgdp: application_hgdp.html
+  application_tgp: application_tgp.html
   quick_start: quick_start.html
+  theory_em: theory_em.html
   user_manual: user_manual.html
-last_built: 2022-09-20T03:19Z
+last_built: 2022-09-25T06:21Z
 
