--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(psd_fit_svi)
 export(psd_fit_vi)
 export(psd_loglikelihood)
 export(psd_loglikelihood_svi)
+export(psd_simulation)
+importFrom(MCMCpack,rdirichlet)
 importFrom(Rcpp,evalCpp)
 importFrom(cowplot,theme_cowplot)
 importFrom(ggplot2,aes_string)
@@ -30,5 +32,8 @@ importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(progress,progress_bar)
+importFrom(stats,dnorm)
+importFrom(stats,rbeta)
+importFrom(stats,rbinom)
 importFrom(stats,runif)
 useDynLib(AwesomePackage)
