--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: AwesomePackage
 Title: Infer ancestry with some models and fit those models with some algorithms
-Version: 1.3.0
+Version: 1.4.0
 Authors@R: person("Jonathon", "Chow", email = "jonathonchow23@gmail.com", 
     role = c("aut", "cre"))
 Description: We use the classical PSD model for ancestor inference, which has 
@@ -29,8 +29,10 @@ LinkingTo:
 Imports: 
     cowplot,
     ggplot2,
+    MCMCpack,
     progress,
-    Rcpp
+    Rcpp,
+    stats
 Suggests: 
     knitr,
     rmarkdown,
