--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,9 +3,10 @@ pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   application_hgdp: application_hgdp.html
+  application_simu: application_simu.html
   application_tgp: application_tgp.html
   AwesomePackage: AwesomePackage.html
   theory_em: theory_em.html
   user_manual: user_manual.html
-last_built: 2022-09-25T11:04Z
+last_built: 2022-09-27T15:32Z
 
