--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,11 +2,18 @@ pandoc: '2.18'
 pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
-  application_hgdp: application_hgdp.html
-  application_simu: application_simu.html
-  application_tgp: application_tgp.html
+  01_quick_start: 01_quick_start.html
+  02_user_manual: 02_user_manual.html
+  03_report: 03_report.html
+  04_presentation: 04_presentation.html
+  05_theory_em: 05_theory_em.html
+  06_theory_sqp: 06_theory_sqp.html
+  07_theory_vi: 07_theory_vi.html
+  08_theory_svi: 08_theory_svi.html
+  09_theory_model: 09_theory_model.html
+  10_application_simu: 10_application_simu.html
+  11_application_tgp: 11_application_tgp.html
+  12_application_hgdp: 12_application_hgdp.html
   AwesomePackage: AwesomePackage.html
-  theory_em: theory_em.html
-  user_manual: user_manual.html
-last_built: 2022-09-27T15:32Z
+last_built: 2022-09-29T05:21Z
 
