--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -14,6 +14,9 @@ articles:
   10_application_simu: 10_application_simu.html
   11_application_tgp: 11_application_tgp.html
   12_application_hgdp: 12_application_hgdp.html
+  13_note_fasttopics: 13_note_fasttopics.html
+  14_note_faststructure: 14_note_faststructure.html
+  15_note_terastructure: 15_note_terastructure.html
   AwesomePackage: AwesomePackage.html
-last_built: 2022-09-29T05:21Z
+last_built: 2022-09-30T12:59Z
 
