--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: AwesomePackage
 Title: Infer ancestry with some models and fit those models with some algorithms
-Version: 1.5.0
+Version: 1.6.0
 Authors@R: person("Jonathon", "Chow", email = "jonathonchow23@gmail.com", 
     role = c("aut", "cre"))
 Description: We use the classical PSD model for ancestor inference, which has 
@@ -30,6 +30,7 @@ Imports:
     cowplot,
     ggplot2,
     MCMCpack,
+    pander,
     progress,
     Rcpp,
     stats
